Fixed header css from wrapping overflow

--- a/app/css/plugin-standard.css
+++ b/app/css/plugin-standard.css
@@ -47,6 +47,7 @@ html, body {
 	color: #fff;
 }
 .header .capsule {
+	white-space: nowrap;
 	float: right;
 	font-size: 16px;
 }
